--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
 
     <header>
-      <h1>Get your reading - anytime.</h1>
+      <h1>Get your reading - anytime, anywhere.</h1>
     </header>
 
     <main>
